# demo-stock-visualizer

./: .env.tpl  .gitignore  Dockerfile  README.md  docker-compose.yml  local.Dockerfile  package-lock.json  package.json  start.sh  tsconfig.json
.github/workflows/: deploy-production.yml  deploy.yml  validate-yaml.yml
k8s/: stockzrs-relay-service-deployment.yml
local/stock-data-ingest/: docker-compose.yml  pyproject.toml
local/stock-data-ingest/sql_migrations/: 0001-create-tables.sql
local/stock-data-ingest/src/: README.md  main.py
local/stock-data-ingest/src/clients/: timescaledb.py  twelvedata_client.py
local/stock-data-ingest/src/utils/: get_sql_migrations.py  logger.py  write_to_csv.py
src/: app.ts  index.ts  server.ts
src/processors/: baseProcessor.ts  getDataProcessor.ts  twelvedataProcessor.ts
src/types/: stockDataTypes.ts
src/utils/: logger.ts
src/websockets/: coinbase.ts  createWebsockets.ts  externalWebSocketClientBase.ts  getWebSocketClient.ts  stockRelay.ts  twelvedata.ts
